--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,21 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: beige;
     color: #333;
+}
+
+h1, h2, h3 {
+    margin-top: 0;
+}
+
+a {
+    text-decoration: none;
+    color: royalblue;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
