--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,32 @@ h1, h2, h3 {
 
 a {
     text-decoration: none;
-    color: royalblue;
+    color: darkblue;
 }
 
 ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+}
+
+/* Header Styles */
+header {
+    background-color: gray;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+header h1 {
+    font-size: 2rem;
+}
+
+nav ul {
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 10px;
 }
